# rknn-gstreamer-tutorial

./: CMakeLists.txt  README.md  build-linux_RK3588.sh  test-appnpu.cpp  test-appsrc2.c  test-launch.c
rknn/: rknn_api.h  rknn_custom_op.h
yolov5/: postprocess.cpp  postprocess.h
